Fix admin panel category total product size

--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -186,39 +186,40 @@
 
                     <!-- User -->
                     <div class="address-element-padding">
-                        <a th:href="@{'/category-details/' + ${category.id}}">
+                        <a th:href="@{'/category-details/' + ${category.getId()}}">
                             <div class="category-element">
                                 <div class="product_content">
                                     <div class="row order - row collapsible">
                                         <div class="col-lg-2 col-md-2 col-xs-6">
                                             <div class="profile-order-text">
-                                                <td class="category-id" th:text="${category.id}"></td>
+                                                <td class="category-id" th:text="${category.getId()}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-3 col-md-3 col-xs-6">
                                             <div class="profile-order-text">
-                                                <td class="category-name" th:text="${category.name}"></td>
+                                                <td class="category-name" th:text="${category.getName()}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-3 col-md-3 col-xs-6">
                                             <div class="profile-order-text">
                                                 <td class="category-type"
-                                                    th:text="#{${'category.' + category.productType}}"></td>
+                                                    th:text="#{${'category.' + category.getProductType()}}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-2 col-md-2 col-xs-6">
                                             <div class="profile-order-text">
-                                                <td class="category-itemNum" th:text="${category.itemNum}"></td>
+                                                <td class="category-itemNum"
+                                                    th:text="${category.getBooks().size()}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-2 col-md-2 col-xs-6">
                                             <div class="profile-order-text">
                                                 <td class="category-subcategory-size"
-                                                    th:text="${category.subcategories.size()}"></td>
+                                                    th:text="${category.getSubcategories().size()}"></td>
                                             </div>
                                         </div>
                                     </div>
