Fix sort button visibility on admin panel category

--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -69,6 +69,7 @@
 </div>
 
 <!-- Sort and filter categories -->
+<span th:if="${categoryPage.totalPages > 0}">
 <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
         <div class="isotope_sorting_text"><span>Sort</span><i
@@ -153,6 +154,7 @@
         </ul>
     </div>
 </div>
+</span>
 
 
 <span th:if="${categoryPage.totalPages > 0}">
