--- a/src/main/resources/templates/category_details/_subcategory.html
+++ b/src/main/resources/templates/category_details/_subcategory.html
@@ -47,62 +47,64 @@
 </div>
 
 <!-- Sort subcategories -->
-<div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
-    <div class="products_dropdown product_dropdown_sorting">
-        <div class="isotope_sorting_text"><span>Sort</span><i
-                class="fa fa-caret-down" aria-hidden="true"></i></div>
-        <ul>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'ID-desc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Decreasing by ID'"
-                   th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'ID-asc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Increasing by ID'"
-                   th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'name-asc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'A - Z'"
-                   th:style="${sort == 'name-asc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'name-desc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Z - A'"
-                   th:style="${sort == 'name-desc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'total-desc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Decreasing by Total'"
-                   th:style="${sort == 'total-desc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'total-asc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Increasing by Total'"
-                   th:style="${sort == 'total-asc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'subcategory-desc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Decreasing by Subcategory'"
-                   th:style="${sort == 'subcategory-desc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-            <li class="item_sorting_btn">
-                <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'subcategory-asc'}, size=${subcategoryPage.size}, page=${1})}"
-                   th:text="'Increasing by Subcategory'"
-                   th:style="${sort == 'subcategory-asc'} ? 'color:#1f5b70'">
-                </a>
-            </li>
-        </ul>
+<span th:if="${subcategoryPage.totalPages > 0}">
+    <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
+        <div class="products_dropdown product_dropdown_sorting">
+            <div class="isotope_sorting_text"><span>Sort</span><i
+                    class="fa fa-caret-down" aria-hidden="true"></i></div>
+            <ul>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'ID-desc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Decreasing by ID'"
+                       th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'ID-asc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Increasing by ID'"
+                       th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'name-asc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'A - Z'"
+                       th:style="${sort == 'name-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'name-desc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Z - A'"
+                       th:style="${sort == 'name-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'total-desc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Decreasing by Total'"
+                       th:style="${sort == 'total-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'total-asc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Increasing by Total'"
+                       th:style="${sort == 'total-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'subcategory-desc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Decreasing by Subcategory'"
+                       th:style="${sort == 'subcategory-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/category-details/{id}#subcategory(id=${category.getId()}, sort=${'subcategory-asc'}, size=${subcategoryPage.size}, page=${1})}"
+                       th:text="'Increasing by Subcategory'"
+                       th:style="${sort == 'subcategory-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+</span>
 
 <span th:if="${subcategoryPage.totalPages > 0}">
 
@@ -232,9 +234,12 @@
     </div>
 </span>
 
-<!-- No category -->
+<!-- No subcategory -->
 <span th:unless="${subcategoryPage.totalPages > 0}">
     <div class="warning-text">There are no subcategories.</div>
+    <div style="text-align: center; padding-bottom: 30px">
+        <img th:src="@{/static/images/no_data.png}">
+    </div>
 </span>
 
 
