--- a/src/main/resources/static/styles/admin-panel.css
+++ b/src/main/resources/static/styles/admin-panel.css
@@ -111,3 +111,43 @@
 .product_images_pad {
     padding-bottom: 40px;
 }
+
+.aligned-row {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.aligned-row::before {
+    display: block;
+}
+
+.order_info_col {
+    padding: 15px 30px;
+}
+
+.order_address {
+    padding-top: 15px;
+    padding-left: 20px;
+    padding-right: 30px;
+    padding-bottom: 20px;
+}
+
+.order_info_title {
+    font-weight: 600;
+    color: #4a4a4a;
+    font-size: 20px;
+    line-height: 0.75;
+}
+
+.order_summary_title {
+    color: #4a4a4a;
+    float: left;
+    margin-right: 5px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.order_summary_content {
+    color: #4a4a4a;
+    font-size: 18px;
+}
