order time converted to 24-hours format from 12-hours format

--- a/src/main/resources/templates/admin_panel/_pending-order.html
+++ b/src/main/resources/templates/admin_panel/_pending-order.html
@@ -285,7 +285,7 @@
                                         <div class="date"
                                              th:text="${#dates.format(order.getOrderDate(), 'dd-MM-yyyy')}"></div>
                                         <div class="time"
-                                             th:text="${#dates.format(order.getOrderDate(), 'hh:mm')}"></div>
+                                             th:text="${#dates.format(order.getOrderDate(), 'HH:mm')}"></div>
                                     </div>
                                 </div>
 
