Fix subcategory breadcrumbs

--- a/src/main/resources/templates/subcategory.html
+++ b/src/main/resources/templates/subcategory.html
@@ -44,11 +44,15 @@
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
                                 <li><a th:href="@{/}">Home</a></li>
                                 <li th:text="#{${'category.' + subcategory.getProductType()}}"></li>
+                                <li th:if="${categoryID != null}">
+                                    <a th:href="@{'/category/{id}'(id=${categoryService.get(categoryID).getId()})}"
+                                       th:text="${categoryService.get(categoryID).getName()}">
+                                    </a>
+                                </li>
                                 <li th:if="${not #lists.isEmpty(path)}" th:each="p : ${path}">
-                                    <a th:if="${path.indexOf(p) == 0}"
-                                       th:href="@{'/category/{id}'(id=${categoryService.get(p).getId()})}"
-                                       th:text="${p}"></a>
-                                    <a th:unless="${path.indexOf(p) == 0}" th:text="${p}"></a>
+                                    <a
+                                            th:href="@{'/subcategory/{id}'(id=${subcategoryService.get(p).getId()})}"
+                                            th:text="${p.getName()}"></a>
                                 </li>
                                 <li style="color: #fbaa1d" th:text="${subcategory.getName()}"></li>
                             </ul>
@@ -77,8 +81,8 @@
                                     <span th:unless="${#lists.isEmpty(subcategory.getSubcategories())}">
                                         <li class="subcategory_li"
                                             th:each="subcategory : ${subcategory.getSubcategories()}">
-                                            <a class="clearfix" th:if="${not #lists.isEmpty(path)}"
-                                               th:href="@{'/subcategory/{id}'(id=${subcategory.getId()}, categoryID=${categoryService.get(path.get(0)).getId()})}">
+                                            <a class="clearfix" th:if="${categoryID != null}"
+                                               th:href="@{'/subcategory/{id}'(id=${subcategory.getId()}, categoryID=${categoryService.get(categoryID).getId()})}">
                                             <span class="float_left">
                                                 <label class="expand_element_text"
                                                        th:text="${subcategory.getName()}"></label>
@@ -86,7 +90,7 @@
                                                 <span class="float_right"
                                                       th:text="${subcategory.getBooks().size()}"></span>
                                             </a>
-                                            <a class="clearfix" th:if="${#lists.isEmpty(path)}"
+                                            <a class="clearfix" th:unless="${categoryID != null}"
                                                th:href="@{'/subcategory/{id}'(id=${subcategory.getId()})}">
                                             <span class="float_left">
                                                 <label class="expand_element_text"
