--- a/src/main/resources/templates/profile/_information.html
+++ b/src/main/resources/templates/profile/_information.html
@@ -278,6 +278,12 @@
         const TEXT_MAX_LENGTH = "255";
         const NUMBER_MAX_LENGTH = 2147483647;
 
+        document.getElementById("change_email").setAttribute("maxlength", TEXT_MAX_LENGTH );
+        document.getElementById("current_password").setAttribute("maxlength", TEXT_MAX_LENGTH );
+        document.getElementById("new_password").setAttribute("maxlength", TEXT_MAX_LENGTH );
+        document.getElementById("new_password_again").setAttribute("maxlength", TEXT_MAX_LENGTH );
+
+
         for (i = 0; i < text_inputs.length; i++) {
             text_inputs[i].setAttribute("maxlength", TEXT_MAX_LENGTH)
         }
